# Py16-web-hw10

./: db.sqlite3  pyproject.toml
hw_project/: README.txt  db.sqlite3
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_options.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_quote.html  add_quote1.html  author_detail.html  base.html  index.html
hw_project/quotes/templatetags/: extract_authors.py
hw_project/users/: urls.py  views.py
hw_project/utils/: insert_quotes_to_mongo.py  migration.py
hw_project1/: README.txt  db.sqlite3  manage.py
hw_project1/hw_project1/: asgi.py  settings.py  wsgi.py
hw_project1/quotes/: forms.py  urls.py  utils.py  views.py
hw_project1/quotes/static/quotes/: style.css
hw_project1/quotes/templates/quotes/: delete_quote.html  index.html  tag_quotes.html
hw_project1/users/: forms.py  urls.py  views.py
hw_project1/users/templates/users/: login.html
hw_project1/utils/: authors.json  migration.py
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/polls/: models.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
notes/noteapp/: admin.py  models.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
notes/notes/: settings.py  urls.py
notes/users/: apps.py  forms.py  models.py  urls.py  views.py
notes/users/migrations/: 0001_initial.py
(+10 files in other folders)
