[tool.poetry]
name = "py16-web-hw10"
version = "0.1.0"
description = ""
authors = ["Maximus-22 <maksim.melnichenko@nservice.com.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"
pymongo = "^4.6.0"
certifi = "^2023.11.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
